--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "prebuild": "rimraf ./build && mkdirp ./build",
     "build": "npm run prebuild && webpack --mode production --progress --output-public-path \"\"",
     "format": "prettier --write '*.js' 'src/**/*.js'",
-    "deploy": "npm run prebuild && webpack --mode production --progress && gh-pages -d build"
+    "deploy": "npm run prebuild && webpack --mode production --progress && gh-pages -d dist"
   },
   "dependencies": {
     "dat.gui": "^0.7.7",
