--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "raccoon-rush",
-  "repository": "cos426finalproject",
+  "repository": "raccoon-rush",
   "version": "0.1.0",
   "title": "Raccoon Rush",
   "description": "Endless runner game with raccoon!",
